syntax = "proto3";

option java_package         = "org.anhonesteffort.trading.proto";
option java_outer_classname = "TradingProto";

message BaseMessage {
  enum Type {
    ERROR               = 0;
    ORDER_EVENT         = 1;
    LABELED_ORDER_EVENT = 2;
  }

  Type              type              = 1;
  Error             error             = 2;
  OrderEvent        orderEvent        = 3;
  LabeledOrderEvent labeledOrderEvent = 4;
}

message Error {
  string message = 1;
}

message OrderEvent {
  enum Type {
    OPEN       = 0;
    TAKE       = 1;
    REDUCE     = 2;
    SYNC_START = 3;
    SYNC_END   = 4;
  }

  enum Side {
    ASK = 0;
    BID = 1;
  }

  Type   type    = 1;
  int64  timeMs  = 2;
  int64  timeNs  = 3;
  string orderId = 4;
  Side   side    = 5;
  int64  price   = 6;
  int64  size    = 7;
}

message Label {
  string name  = 1;
  int64  value = 2;
}

message LabeledOrderEvent {
  OrderEvent orderEvent = 1;
  repeated Label labels = 2;
}
